Several minor and major changes:
Improvement in currencies management.
New icons in lateral drag menu.
Downgrading Picasso library to avoid a same library with two different versions.
Fixing and improvements following the advises of code inspertor.
Style refactoring in style and dimens xml file.
Fixed vetical position in all activitities.